--- a/packages/app/public/index.html
+++ b/packages/app/public/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- <meta name="viewport" content="initial-scale=1" /> -->
+    <meta name="viewport" content="width=1280px,  initial-scale=0" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Web site created using create-react-app" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -22,6 +22,27 @@
     <title></title>
   </head>
   <body>
+    <script>
+      // alert(
+      //   '' +
+      //     screen.height +
+      //     ' ' +
+      //     screen.width +
+      //     ' ' +
+      //     window.innerHeight +
+      //     ' ' +
+      //     window.innerWidth +
+      //     ' ;viewport h: ' +
+      //     document.documentElement.clientHeight +
+      //     ' viewport w: ' +
+      //     document.documentElement.clientWidth +
+      //     ' html h: ' +
+      //     document.documentElement.offsetHeight +
+      //     ' html w: ' +
+      //     document.documentElement.offsetWidth
+      // );
+      // document.addEventListener('click', (e) => alert(e.screenY + ' ' + e.screenX));
+    </script>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
