--- a/packages/app/public/index.html
+++ b/packages/app/public/index.html
@@ -22,27 +22,7 @@
     <title>Polkadot Alliance</title>
   </head>
   <body>
-    <script>
-      // alert(
-      //   '' +
-      //     screen.height +
-      //     ' ' +
-      //     screen.width +
-      //     ' ' +
-      //     window.innerHeight +
-      //     ' ' +
-      //     window.innerWidth +
-      //     ' ;viewport h: ' +
-      //     document.documentElement.clientHeight +
-      //     ' viewport w: ' +
-      //     document.documentElement.clientWidth +
-      //     ' html h: ' +
-      //     document.documentElement.offsetHeight +
-      //     ' html w: ' +
-      //     document.documentElement.offsetWidth
-      // );
-      // document.addEventListener('click', (e) => alert(e.screenY + ' ' + e.screenX));
-    </script>
+    <script></script>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
